# OOP_labs

lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: task.h
lab1/scr/: task.cpp
lab1/test/: test.cpp
